# lamb

./: lamb.cabal
app/: Main.hs
src/: Lamb.hs
