cabal-version: 2.4
name:          lamb
version:       0.1.0.0
author:        Morrow
maintainer:    themorrowm@gmail.com

library
  exposed-modules:  Lamb
  build-depends:
    , base    ^>=4.14.1.0
    , parsec
    , text

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable lamb
  main-is:          Main.hs
  build-depends:
    , base       ^>=4.14.1.0
    , haskeline
    , lamb

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall
